CHANGES IN VERSION 1.3.2
------------------------
 o add support of ape bootstrap analysis <2015-10-26, Mon>
   see https://github.com/GuangchuangYu/ggtree/issues/20
 o add support of ancestral sequences inferred by phangorn <2015-10-26, Mon>
   see https://github.com/GuangchuangYu/ggtree/issues/21
 
CHANGES IN VERSION 1.3.1
------------------------
 o change angle to angle + 90, so that label will in radial direction <2015-10-22, Thu>
   + see https://github.com/GuangchuangYu/ggtree/issues/17
 o na.rm should be always passed to layer(), fixed it in geom_hilight and geom_text2 <2015-10-21, Wed>
   + see https://github.com/hadley/ggplot2/issues/1380
 o matching beast stats with tree using internal node number instead of label <2015-10-20, Tue>
 
CHANGES IN VERSION 1.3.0
------------------------
 o BioC 3.3 branch
 
CHANGES IN VERSION 1.1.21
------------------------
 o support hyphy output of ancestral sequences that is in phylip sequential format (no TAXALABELS block available) <2015-10-07, Wed>
 o fixed bug in geom_tiplab when x contains NA (eg, removing by collapse function) <2015-10-01, Thu>
 o new implementation of geom_hilight, a truly geom layer function <2015-09-10, Thu>
 
CHANGES IN VERSION 1.1.20
------------------------
 o bug fixed in %add2%, if node available use node, otherwise use label <2015-09-04, Fri>
 o bug fixed of subview for considering aes mapping of x and y <2015-09-03, Thu>
 o update vignette by adding r8s example <2015-09-02, Wed>
 o defined r8s class, see http://loco.biosci.arizona.edu/r8s/  <2015-09-02, Wed>
   + add r8s sample files
   + read.r8s, parser function
   + fortify method
   + plot, get.tree, get.fields, groupOTU, groupClade, scale_color, gzoom and show methods
 o bug fixed in fortify.multiPhylo, convert df$.id to factor of levels=names(multiPhylo_object) <2015-09-02, Wed>   
 o update scale_x_ggtree to support Date as x-axis <2015-09-01, Tue>